--- a/Code/puzzle_display_control/platformio.ini
+++ b/Code/puzzle_display_control/platformio.ini
@@ -12,5 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/Adafruit RA8875@^1.4.0
+lib_deps = 
+	adafruit/Adafruit RA8875@^1.4.0
+	madhephaestus/ESP32Encoder@^0.6.0
 monitor_speed = 9600
+build_flags = -Ilib -Iinclude
