--- a/Code/Puzzle_MQTT/platformio.ini
+++ b/Code/Puzzle_MQTT/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.19.0
+monitor_speed = 115200
+upload_port = COM4
