started to implement MQTT in the puzzle-statemachine

--- a/Code/puzzle_display_control/platformio.ini
+++ b/Code/puzzle_display_control/platformio.ini
@@ -17,5 +17,7 @@ lib_deps =
 	madhephaestus/ESP32Encoder@^0.6.0
 	dfrobot/DFRobotDFPlayerMini@^1.0.5
 	plerup/EspSoftwareSerial@^6.15.2
+	bblanchon/ArduinoJson@^6.19.1
+	knolleary/PubSubClient@^2.8
 monitor_speed = 9600
 build_flags = -Ilib -Iinclude
