added hour display on last screen

--- a/Code/puzzle_display_control/platformio.ini
+++ b/Code/puzzle_display_control/platformio.ini
@@ -19,5 +19,6 @@ lib_deps =
 	plerup/EspSoftwareSerial@^6.15.2
 	bblanchon/ArduinoJson@^6.19.1
 	knolleary/PubSubClient@^2.8
+	arduino-libraries/NTPClient@^3.1.0
 monitor_speed = 9600
 build_flags = -Ilib -Iinclude
